terraform-mutable/sg.tf
resource "aws_security_group" "sg" {
  name        = "sg_${var.COMPONENT}_${var.ENV}"
  description = "sg_${var.COMPONENT}_${var.ENV}"
  vpc_id = data.terraform_remote_state.vpc.outputs.VPC_ID

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = data.terraform_remote_state.vpc.outputs.PRIVATE_SUBNET_CIDR
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = concat(data.terraform_remote_state.vpc.outputs.PRIVATE_SUBNET_CIDR,tolist([data.terraform_remote_state.vpc.outputs.DEFAULT_VPC_CIDR]))
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_${var.COMPONENT}_${var.ENV}"
  }
}
